<resources>
    <string name="app_name">FoodDelivery</string>
    <string name="label_phoneNumber">Nhập số điện thoại để tiếp tục</string>
    <string name="helper_otp">Mã xác nhận sẽ được gửi qua số điện thoại này</string>
    <string name="btn_google">Tiếp tục với Google</string>
    <string name="btn_facebook">Tiếp tục với Facebook</string>
    <string name="label_phoneNumber1">Đăng nhập bằng cách nhập số điện thoại</string>
    <string name="placeholder_phoneNumber">Số điện thoại</string>
    <string name="label_password">Nhập mật khẩu</string>
    <string name="helper_phoneNumber2">Số điện thoại dùng đăng ký là </string>
    <string name="placeholder_password">Mật khẩu</string>
    <string name="label_forgotpassword">Quên mật khẩu?</string>
    <string name="label_otpconfirm">Mã OTP xác nhận</string>
    <string name="helper_otpconfirm">Hãy điền OTP gồm 6 số vừa được gửi đến số</string>
    <string name="helper_notreceiveotp">Không nhận được mã?</string>
    <string name="label_resendotp">Gửi lại mã</string>

    <string name="btnNext">TIẾP THEO</string>
    <string name="btnSignIn">ĐĂNG NHẬP</string>
    <string name="btnConfirm">XÁC NHẬN</string>
    <string name="_84">+84 -</string>
    <string name="nameRestaurant">Quán Ông Tám - Lẩu Nướng Bình Dân</string>
    <string name="nameFood">Cà phê sữa</string>
    <string name="tempPrice">31,550đ</string>
    <string name="size_drink">Size M</string>
    <string name="_7_000">7,000đ</string>
    <string name="nameAddBar">Thêm món mới</string>
    <string name="_31_550">31,550đ</string>
    <string name="chooseSize">Chọn size (Chọn 1)</string>
    <string name="chooseIceLevel">Chọn mức đá (Chọn 1)</string>
    <string name="chooseTopping">Topping (Tối đa 10)</string>
    <string name="userNote">Ghi chú cho quán</string>
    <string name="standardDelivery">Giao hàng tiêu chuẩn</string>
    <string name="timeDelivery">Dự kiến giao lúc 17:40</string>
    <string name="textChange">Thay đổi</string>
    <string name="loadMore">Xem thêm</string>
    <string name="viewRating">Xem đánh giá</string>
    <string name="_15_comments">(15+ Bình luận)</string>
    <string name="statueTemp">Có gì ngon?</string>
    <string name="_5_loadmore">XEM THÊM (+5)</string>
    <string name="tocoto_brand">TocoToco - Tân Lập</string>
    <string name="_20_time">20 phút</string>
    <string name="calDistance">2.7 km</string>
    <string name="order_details">Chi tiết đơn hàng</string>
    <string name="userName">Lê Trịnh Thanh Thúy</string>
    <string name="accountInformation">THÔNG TIN TÀI KHOẢN</string>
    <string name="ratings">Đánh giá</string>
    <string name="likingRestaurant">Quán yêu thích</string>
    <string name="addressBook">Sổ địa chỉ</string>
    <string name="couponWallet">Ví Coupon</string>
    <string name="paymentManagement">Quản lý thanh toán</string>
    <string name="support">Hỗ trợ</string>
    <string name="announcement">Thông báo</string>
    <string name="policies">Điều khoản và chính sách</string>
    <string name="myOrders">Đơn hàng của tôi</string>
    <string name="tv_street">20, Abayomi Adewale Street,</string>
    <string name="tv_provice">Ago Palace way, Okota (LAGOS)</string>
    <string name="tv_city">LAGOS</string>
    <string name="cusname">Nguyễn Văn A</string>
    <string name="cusphone">0854000999</string>
    <string name="restaurantName">TocoToco - Tân Lập </string>
    <string name="quantity">1</string>
    <string name="total">33,000đ</string>
    <string name="tv_distance">0,8</string>
    <string name="shippingprice">10,000đ</string>
    <string name="allTotal">43,000đ</string>
    <string name="note">không có</string>
    <string name="idOrder">270938-VN8293</string>
    <string name="timeOrder">Hôm nay 03:32</string>
    <string name="paymentMethod">Tiền mặt</string>
</resources>