<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterPassword">
    <include layout="@layout/first_toolbar"/>

    <TextView
        android:id="@+id/txtInstruct3"
        android:layout_width="334dp"
        android:layout_height="32dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="317dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/label_password"
        android:textColor="@color/black"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/txtInstruct4"
        android:layout_width="329dp"
        android:layout_height="20dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="364dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/helper_phoneNumber2"
        android:textColor="@color/mainGray"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/icon_back" />

    <EditText
        android:id="@+id/text"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="405dp"
        android:background="@drawable/edittext_border_purple"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/placeholder_password"
        android:paddingLeft="18dp"
        android:textSize="14sp"
        android:drawableRight="@drawable/drawable_password"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="336dp"
        android:layout_height="55dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="715dp"
        android:backgroundTint="@color/mainPurple"
        android:fontFamily="@font/inter_bold"
        android:text="@string/btnSignIn"
        app:cornerRadius="8dp"
        app:strokeColor="@color/mainPurple" />

    <TextView
        android:id="@+id/txtInstruct5"
        android:layout_width="336dp"
        android:layout_height="20dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="471dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/label_forgotpassword"
        android:textColor="@color/black"
        android:textSize="14sp" />
</RelativeLayout>