<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/first_toolbar"/>

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="312dp"
        android:layout_height="55dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="370dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/drawable_google"
        android:fontFamily="@font/inter_bold"
        android:text="@string/btn_google"
        android:textAllCaps="false"
        android:textColor="@color/mainGray"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:strokeColor="@color/mainPurple"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="312dp"
        android:layout_height="55dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="440dp"
        android:backgroundTint="@color/aquaBlue"
        android:drawableLeft="@drawable/drawable_facebook"
        android:fontFamily="@font/inter_bold"
        android:text="@string/btn_facebook"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:strokeColor="@color/aquaBlue" />

    <TextView
        android:id="@+id/txtPhoneNumber"
        android:layout_width="319dp"
        android:layout_height="21dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="550dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/label_phoneNumber1"
        android:textColor="@color/mainPurple"
        android:textSize="16sp" />
</RelativeLayout>