<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:orientation="vertical">

        <include layout="@layout/first_toolbar" />

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="-200dp"
            android:visibility="visible"
            app:srcCompat="@drawable/icon_back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="75dp"
        android:orientation="vertical"
        android:padding="37dp"
        tools:layout_centerVertical="true">

        <TextView
            android:id="@+id/txtInstruct1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/inter_bold"
            android:text="@string/label_phoneNumber"
            android:textColor="@color/black"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/txtInstruct2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/txtInstruct1"
            android:fontFamily="@font/inter_medium"
            android:text="@string/helper_otp"
            android:textColor="@color/mainGray"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="336dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_border_purple">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:fontFamily="@font/inter_bold"
                android:paddingLeft="18dp"
                android:text="@string/_84"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtphoneNumber"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/placeholder_phoneNumber"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp">

        <Button
            android:id="@+id/btnGetOTP"
            android:layout_width="336dp"
            android:layout_height="55dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="715dp"
            android:backgroundTint="@color/mainPurple"
            android:enabled="false"
            android:fontFamily="@font/inter_bold"
            android:text="@string/btnNext"
            app:cornerRadius="8dp"
            app:strokeColor="@color/mainPurple" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="715dp"
            android:visibility="gone" />
    </FrameLayout>
    </ScrollView>
</RelativeLayout>