<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ConfirmOTPActivity">
    <include layout="@layout/first_toolbar"/>
    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/icon_back" />
    <TextView
        android:id="@+id/txtInstruct3"
        android:layout_width="334dp"
        android:layout_height="32dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="317dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/label_otpconfirm"
        android:textColor="@color/black"
        android:textSize="23sp" />
    <TextView
        android:id="@+id/txtInstruct2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="364dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/helper_otpconfirm"
        android:textColor="@color/mainGray"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/txtphoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="390dp"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/black"
        android:textSize="14sp" />
    <EditText
        android:id="@+id/txtinputCode1"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="450dp"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/mainGray"
        android:textSize="18sp"
        android:paddingStart="18dp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/txtinputCode2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="450dp"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/mainGray"
        android:textSize="18sp"
        tools:ignore="LabelFor" />
    <EditText
        android:id="@+id/txtinputCode3"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="450dp"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/mainGray"
        android:textSize="18sp"
        tools:ignore="LabelFor" />
    <EditText
        android:id="@+id/txtinputCode4"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="450dp"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/mainGray"
        tools:ignore="LabelFor"
        android:textSize="18sp"
        />
    <EditText
        android:id="@+id/txtinputCode5"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="265dp"
        android:layout_marginTop="450dp"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/mainGray"
        tools:ignore="LabelFor"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/txtinputCode6"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="45dp"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:layout_marginStart="270dp"
        android:maxLength="1"
        android:textColor="@color/mainGray"
        android:textSize="18sp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtInstruct4"
        android:layout_width="180dp"
        android:layout_height="20dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="550dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/helper_notreceiveotp"
        android:textColor="@color/mainGray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtResendOTP"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="195dp"
        android:layout_marginTop="550dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/label_resendotp"
        android:textColor="@color/mainGray"
        android:textSize="14sp" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnGetOTP"
            android:layout_width="336dp"
            android:layout_height="55dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="715dp"
            android:backgroundTint="@color/mainPurple"
            android:fontFamily="@font/inter_bold"
            android:text="@string/btnConfirm"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            app:strokeColor="@color/mainPurple" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:visibility="gone"/>
</FrameLayout>

</RelativeLayout>