<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_marginBottom="1.5dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="15dp">

        <ImageView
            android:id="@+id/image_item_food"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/pic_drink" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:ellipsize="end"
                android:fontFamily="@font/inter_semibold"
                android:maxLines="2"
                android:text="@string/nameRestaurant"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/type_of_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/inter_medium"
                android:maxLines="1"
                android:text="@string/nameFood"
                android:textColor="@color/mainGray"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/tempPrice"
                    android:textColor="@color/validRed"
                    android:textSize="16sp" />

                <!--<View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/iv_minus"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:src="@drawable/icon_minus"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/distance_shop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_plus"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:src="@drawable/icon_add"
                    android:visibility="visible" />-->
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>